2009-12-09  Eric Seidel  <eric@webkit.org>

        Reviewed by Adam Barth.

        bugzilla-tool needs a command to list patches needing cq+
        https://bugs.webkit.org/show_bug.cgi?id=32351

        * Scripts/modules/bugzilla.py:
         - Parse attacher_email from attachment xml.
        * Scripts/modules/bugzilla_unittest.py:
         - Test new attacher_email parsing.
        * Scripts/modules/commands/queries.py:
         - Add PatchesToCommitQueue
        * Scripts/modules/commands/queries_unittest.py:
         - Tests for PatchesToCommitQueue
        * Scripts/modules/mock_bugzillatool.py:
         - Add necessary mock methods for running PatchesToCommitQueue

2009-12-10  Adam Barth  <abarth@webkit.org>

        Unreviewed.  Turns out every StepSequence command needs a --quiet
        option.

        * Scripts/modules/stepsequence.py:

2009-12-10  Eric Z. Ayers  <zundel@google.com>

        Reviewed by Pavel Feldman.

        Implements displayWebView() to force an invalidation and repaint.
        This fixes a problem running the timeline-paint.html unit test.

        https://bugs.webkit.org/show_bug.cgi?id=31729

        * DumpRenderTree/gtk/DumpRenderTree.cpp:
        (displayWebView):

2009-12-10  Adam Barth  <abarth@webkit.org>

        Reviewed by Eric Seidel.

        [bzt] Convert more commands to StepSequences
        https://bugs.webkit.org/show_bug.cgi?id=32362

        We should eventually convert all the commands, but I'm starting with
        the easy ones.

        * Scripts/modules/commands/download.py:

2009-12-10  Xan Lopez  <xlopez@igalia.com>

        Reviewed by Jan Alonzo.

        [GTK] editing/selection/shrink-selection-after-shift-pagedown.html failing
        https://bugs.webkit.org/show_bug.cgi?id=31103

        Give focus to the webviews when we create them, since some tests expect this.

        * DumpRenderTree/gtk/DumpRenderTree.cpp:
        (main):

2009-12-10  Eric Seidel  <eric@webkit.org>
