@@ -38,7 +38,7 @@ import unittest
 import urllib
 
 from datetime import date
-from modules.executive import run_command, ignore_error, ScriptError
+from modules.executive import Executive, run_command, ScriptError
 from modules.scm import detect_scm_system, SCM, CheckoutNeedsUpdate, commit_error_handler
 
 # Eventually we will want to write tests which work for both scms. (like update_webkit, changed_files, etc.)
@@ -147,12 +147,12 @@ svn: resource out of date; try updating
 """
         command_does_not_exist = ['does_not_exist', 'invalid_option']
         self.assertRaises(OSError, run_command, command_does_not_exist)
-        self.assertRaises(OSError, run_command, command_does_not_exist, error_handler=ignore_error)
+        self.assertRaises(OSError, run_command, command_does_not_exist, error_handler=Executive.ignore_error)
 
         command_returns_non_zero = ['/bin/sh', '--invalid-option']
         self.assertRaises(ScriptError, run_command, command_returns_non_zero)
         # Check if returns error text:
-        self.assertTrue(run_command(command_returns_non_zero, error_handler=ignore_error))
+        self.assertTrue(run_command(command_returns_non_zero, error_handler=Executive.ignore_error))
 
         self.assertRaises(CheckoutNeedsUpdate, commit_error_handler, ScriptError(output=git_failure_message))
         self.assertRaises(CheckoutNeedsUpdate, commit_error_handler, ScriptError(output=svn_failure_message))
